# CMakeList.txt : CMake project for boost_asio_example, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.


add_executable (boostasioexample "boost_asio_example.cpp" "boost_asio_example.h")

# TODO: Add tests and install targets if needed.
